--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,9 +7,8 @@ python-multipart==0.0.20
 
 # Database
 sqlalchemy[asyncio]==2.0.36
-asyncpg==0.30.0
 alembic==1.14.1
-psycopg2-binary==2.9.10
+psycopg[binary]==3.1.18
 
 # Agent Engine
 langgraph==0.2.60
