--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,11 +8,11 @@ python-multipart==0.0.20
 # Database
 sqlalchemy[asyncio]==2.0.36
 alembic==1.14.1
-psycopg[binary]==3.1.18
+psycopg[binary]>=3.1.18
 
 # Agent Engine
 langgraph==0.2.60
-langchain-core==0.3.28
+langchain-core==0.3.29
 langchain-openai==0.3.0
 
 # Task Queue
