refactor(api): switch communication integrations to 100% free waha and smtp methods

--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,12 @@ CORS_ORIGINS=http://localhost:3000
 # ── LLM Provider ───────────────────────────────────────
 OPENAI_API_KEY=sk-your-key-here
 
-# ── Twilio (WhatsApp) ──────────────────────────────────
-TWILIO_ACCOUNT_SID=your-sid
-TWILIO_AUTH_TOKEN=your-token
-TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+# ── WAHA (WhatsApp Web API) ────────────────────────────
+WAHA_BASE_URL=http://localhost:3001
 
-# ── Resend (Email) ─────────────────────────────────────
-RESEND_API_KEY=re_your-key-here
+# ── SMTP (Email) ───────────────────────────────────────
+GMAIL_ADDRESS=your.email@gmail.com
+GMAIL_APP_PASSWORD=your_app_password
 
 # ── Clerk (Auth) ───────────────────────────────────────
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxx
