feat(integrations): switch to 100% free WAHA and Gmail SMTP
Removed Twilio and Resend dependencies and implemented free-tier HTTP and SMTP integrations. Added test script.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -81,6 +81,8 @@ services:
     restart: unless-stopped
     ports:
       - "3001:3000"
+    environment:
+      - WHATSAPP_DEFAULT_ENGINE=WEBJS
 
 volumes:
   postgres_data:
